gitops/core/teleport/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teleport
  namespace: teleport
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
  hostnames:
    - "teleport.menghi.uy"
    - "*.teleport.menghi.uy"
    - "kibana.menghi.uy"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: teleport
